# aula09_bootcamp_python

./: exemplo_00.py  logging_exemplo_erros.py  pyproject.toml
